--- a/package.json
+++ b/package.json
@@ -42,21 +42,6 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not ie <= 99",
-      "not android <= 4.4.4",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 2 chrome version",
-      "last 2 firefox version",
-      "last 2 safari version",
-      "last 2 edge version"
-    ]
-  },
   "devDependencies": {
     "assert": "^2.1.0",
     "autoprefixer": "^10.4.15",
@@ -71,5 +56,20 @@
     "stream-http": "^3.2.0",
     "tailwindcss": "^3.3.3",
     "url": "^0.11.3"
+  },
+  "browserslist": {
+    "production": [
+      "chrome >= 67",
+      "edge >= 79",
+      "firefox >= 68",
+      "opera >= 54",
+      "safari >= 14"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
+
