--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-scroll": "^1.8.9",
     "react-tsparticles": "^2.12.2",
     "redux-persist": "^6.0.0",
+    "sweetalert2": "^11.7.31",
+    "sweetalert2-react-content": "^5.0.7",
     "tsparticles": "^2.12.0",
     "viem": "^1.10.14",
     "wagmi": "^1.4.2",
@@ -72,4 +74,3 @@
     ]
   }
 }
-
