--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-select": "^5.7.7",
+    "react-select-country-list": "^2.2.3",
     "react-tsparticles": "^2.12.2",
     "redux-persist": "^6.0.0",
     "tsparticles": "^2.12.0",
@@ -72,4 +74,3 @@
     ]
   }
 }
-
